# QMWEStatistic

./: CMakeLists.txt  CPackConfig.cmake  README
data/xor/: labelincriteria.txt  labeloutcriteria.txt  xor.prj  xor_fixed.data  xor_float.net
src/: CDialogSettings.cpp  CDialogSettings.h  CDialogSettings.ui  CFannNetwork.cpp  CFannNetwork.h  CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CMainwindow.cpp  CMainwindow.h  CMainwindow.ui  CMakeLists.txt  CPlotter.cpp  CPlotter.h  dialognewproject.cpp  dialognewproject.h  dialognewproject.ui  main.cpp
